fixed Chrome alignment issue

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,7 @@ h1,h2,h3,h4{
 p {
 	margin-top: 2vh;
 	margin-bottom: 3vh;
+    overflow: auto;
 }
 
 p.no-overflow {
@@ -144,8 +145,8 @@ img.sixteenth-h {
 	height: 6vh;
 }
 img.textimg {
-    height: 1.4vw;
-    margin-bottom: -0.4vw;
+    height: 1vw;
+    /* margin-bottom: -0.4vw; */
 }
 
 .common-parts {
